--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,19 @@
 {
-  "builds": [{
+  "builds": [
+    {
       "src": "mynotes/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-  }],
+    }
+  ],
   "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "mynotes/wsgi.py"
+    {
+      "src": "/(.*)",
+      "dest": "mynotes/wsgi.py",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
       }
+    }
   ]
 }
